Correct documentation of aborttimeout, no matching option
$ grep -rn aborttimeout linkcheck
linkcheck/configuration/confparse.py:167:        self.read_int_option(section, "aborttimeout", min=1)
linkcheck/configuration/__init__.py:184:        self["aborttimeout"] = 300
linkcheck/director/aggregator.py:173:            timeout=strformat.strduration_long(self.config["aborttimeout"]),
linkcheck/director/aggregator.py:200:        timeout = self.config["aborttimeout"]

config["aborttimeout"] is only set from aborttimeout and is the only
value used by Aggregate.abort().

--- a/doc/man/de/linkcheckerrc.5
+++ b/doc/man/de/linkcheckerrc.5
@@ -64,7 +64,7 @@ Setze den Timeout für TCP\-Verbindungen in Sekunden. Der Standard Timeout ist 6
 Time to wait for checks to finish after the user aborts the first
 time (with Ctrl\-C or the abort button). The default abort timeout is
 300 seconds.
-Command line option: \fB\-\-timeout\fP
+Command line option: none
 .TP
 \fBuseragent=\fP\fISTRING\fP
 Gibt den User\-Agent an, der zu HTTP\-Servern geschickt wird, z.B. "Mozilla/4.0". Der Standard ist "LinkChecker/X.Y", wobei X.Y die aktuelle Version von LinkChecker ist. Kommandozeilenoption: \fB\-\-user\-agent\fP
