--- a/doc/man/en/linkcheckerrc.5
+++ b/doc/man/en/linkcheckerrc.5
@@ -1,6 +1,6 @@
 .\" Man page generated from reStructuredText.
 .
-.TH "LINKCHECKERRC" "5" "September 25, 2020" "2020-09-25" "LinkChecker"
+.TH "LINKCHECKERRC" "5" "October 02, 2020" "2020-10-02" "LinkChecker"
 .SH NAME
 linkcheckerrc \- configuration file for LinkChecker
 .
@@ -83,7 +83,7 @@ Command line option: \fB\-\-timeout\fP
 Time to wait for checks to finish after the user aborts the first
 time (with Ctrl\-C or the abort button). The default abort timeout is
 300 seconds.
-Command line option: \fB\-\-timeout\fP
+Command line option: none
 .TP
 \fBuseragent=\fP\fISTRING\fP
 Specify the User\-Agent string to send to the HTTP server, for
