Add tests and docs.

--- a/doc/man/de/linkcheckerrc.5
+++ b/doc/man/de/linkcheckerrc.5
@@ -104,6 +104,12 @@ Command line option: \fB\-\-no\-robots\fP
 \fBallowedschemes=\fP\fINAME\fP[\fB,\fP\fINAME\fP\&...]
 Allowed URL schemes as comma\-separated list.
 Command line option: none
+.TP
+\fresultcachesize=\fP\fINUMBER\fP
+Setzt die Größe des Caches für abgefragte URLs.
+Standard sind 100 000 URLs.
+Kommandozeilenoption: keine
+
 .UNINDENT
 .SS filtering
 .INDENT 0.0
