--- a/doc/man/en/linkcheckerrc.5
+++ b/doc/man/en/linkcheckerrc.5
@@ -137,6 +137,11 @@ Command line option: \fB\-\-no\-robots\fP
 \fBallowedschemes=\fP\fINAME\fP[\fB,\fP\fINAME\fP\&...]
 Allowed URL schemes as comma\-separated list.
 Command line option: none
+.TP
+\fresultcachesize=\fP\fINUMBER\fP
+Set the result cache size.
+The default is 100 000 URLs.
+Command line option: none
 .UNINDENT
 .SS filtering
 .INDENT 0.0
