--- a/doc/man/de/linkcheckerrc.5
+++ b/doc/man/de/linkcheckerrc.5
@@ -1,6 +1,6 @@
 .\" Man page generated from reStructuredText.
 .
-.TH "LINKCHECKERRC" "5" "Januar 28, 2021" "2021-01-28" "LinkChecker"
+.TH "LINKCHECKERRC" "5" "Juni 20, 2021" "2021-06-20" "LinkChecker"
 .SH NAME
 linkcheckerrc \- Konfigurationsdatei für LinkChecker
 .
@@ -103,6 +103,11 @@ Command line option: \fB\-\-no\-robots\fP
 .TP
 \fBallowedschemes=\fP\fINAME\fP[\fB,\fP\fINAME\fP\&...]
 Allowed URL schemes as comma\-separated list.
+Command line option: none
+.TP
+\fBresultcachesize=\fP\fINUMBER\fP
+Set the result cache size.
+The default is 100 000 URLs.
 Command line option: none
 .UNINDENT
 .SS filtering
